--- a/style.css
+++ b/style.css
@@ -2,4 +2,29 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center;
+}
+
+header a{
+  margin-left: 5px;
+  padding: 0px 4px;
+  background-color: rgb(219, 195, 173);
+ }
+img{
+ display: block;
+ margin: 0 auto;
+ padding-bottom: 10px;
+}
+#featured-property > p{
+padding: 1% 18%;
+line-height: 24px;
+font-size: 20px;
+}
+#details {
+  background-color:red;
+}
+div{
+  position: relative;
+  display: inline-table;
+  padding: 1% 7%;
 }
